# RAGify

./: .env  README.md
ragify/: README.md  pyproject.toml
ragify/docs/: python.txt
ragify/ragify/: chunker.py  constants.py  demo.py  document_parser.py  evaluation.py  ingest.py  main.py  model.py  optimizer.py  paragraph_chunking.py  recursive_chunking.py  semantic_chunking.py  sentence_chunking.py  sliding_window_chunking.py  split.py  token_based_chunking.py  tokenizer.py
